--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $error-color: #ea334d;
 
 // Z-index variables
 $layer-header: 100;
+$layer-popup: 50;
 
 // Animation variables
 $default-transition: 0.3s ease-in-out;
