--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,9 @@
 @import "../pages/Galleries/components/GalleryCard/GalleryCard.scss";
 @import "../pages/Galleries/components/GalleriesList/GalleriesList.scss";
 @import "../pages/Photos/components/NoPhotos/NoPhotos.scss";
+@import "../pages/Photos/components/PhotoCard/PhotoCard.scss";
+@import "../pages/Photos/components/PhotosList/PhotoList.scss";
+@import "../pages/Photos/components/Sort/Sort.scss";
 @import "../components/CircleProgressBar/CircleProgressBar.scss";
 @import "../pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss";
 @import "../pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss";
