--- a/src/pages/Photos/components/PhotosList/PhotoList.scss
+++ b/src/pages/Photos/components/PhotosList/PhotoList.scss
@@ -1,5 +1,4 @@
 .photo-list {
-  position: relative;
   display: flex;
   flex-direction: column;
   padding-top: $top-menu-height;
@@ -10,10 +9,13 @@
     width: 100%;
 
     @include tablet {
-      margin-right: 32px;
-      margin-bottom: 24px;
+      margin-bottom: 0;
       width: 300px;
       height: 249px;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 
@@ -29,16 +31,17 @@
   }
 
   &__container {
-    $this: &;
-
     @include reset-list;
 
     margin-top: 16px;
 
     @include tablet {
       display: flex;
+      align-items: center;
       flex-wrap: wrap;
+      justify-content: flex-start;
       margin-top: 24px;
+      gap: 24px 32px;
     }
   }
 }
