--- a/src/pages/Photos/components/PhotosList/PhotoList.scss
+++ b/src/pages/Photos/components/PhotosList/PhotoList.scss
@@ -4,21 +4,6 @@
   padding-top: $top-menu-height;
   min-height: 100vh;
 
-  &__card {
-    margin-bottom: 16px;
-    width: 100%;
-
-    @include tablet {
-      margin-bottom: 0;
-      width: 300px;
-      height: 249px;
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-
   &__button-container {
     display: flex;
     align-items: center;
@@ -39,9 +24,27 @@
       display: flex;
       align-items: center;
       flex-wrap: wrap;
-      justify-content: flex-start;
       margin-top: 24px;
-      gap: 24px 32px;
+      margin-right: -16px;
+      margin-left: -16px;
+    }
+  }
+
+  &__card {
+    margin-bottom: 16px;
+    width: 100%;
+
+    @include tablet {
+      flex-grow: 1;
+      margin-bottom: 0;
+      padding: 16px;
+      width: 50%;
+      max-width: 50%;
+    }
+
+    @include desktop {
+      width: 25%;
+      max-width: 25%;
     }
   }
 }
