feat(pages): #863gvhdj8: add a page that will open if the requested page does not exist

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "../pages/Login/LoginPage.scss";
 @import "../pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss";
 @import "../pages/Metrics/MetricsPage.scss";
+@import "../pages/NotFoundPage/NotFoundPage";
 
 // components
 @import "../components/Error/Error.scss";
