fix: #85zt9u1mg: fix styles and request for reset gallery

--- a/src/pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss
+++ b/src/pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss
@@ -25,6 +25,7 @@
 
   @include desktop {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     min-width: 500px;
   }
